<resources>
    <string name="app_name">Trail Finder</string>

    <string name="about">About</string>
    <string name="developed_by"><b>Developed by: </b>Peter G. Williams</string>
    <string name="privacy_policy"><a href="https://williamspete321.github.io/trailfinderprivacypolicy.github.io/">Privacy Policy</a></string>
    <string name="contact"><b>Contact: </b><a href="mailto:williamspete321@gmail.com">williamspete321@gmail.com</a></string>
    <string name="note"><b>Note: </b>Trail Finder uses the Hiking Project Data API but is not endorsed or certified by Hiking Project. Icons are by Freepik and Roundicons from flaticon.com.</string>
    <string name="hiker_image">A Man Hiking</string>

    <string name="find_me_a_trail">Find Me A Trail!</string>
    <string name="let_me_choose">Let Me Choose!</string>

    <string name="network_not_available_message">Network not available. Check connection.</string>

    <string name="class_cast_exception_message"> must implement OnTrailLoadedListener</string>

    <string name="trail_difficulty_easy">Easy</string>
    <string name="trail_difficulty_moderate">Moderate</string>
    <string name="trail_difficulty_difficult">Difficult</string>
    <string name="trail_lat_lon_snippet">Lat: %1$.5f, Lon: %2$.5f</string>
    <string name="trail_length">%1$.1f mi</string>
    <string name="trail_ascent"><b>Ascent: </b>%1$,d\'</string>
    <string name="trail_descent"><b>Descent: </b>%1$,d\'</string>
    <string name="trail_high"><b>High: </b>%1$,d\'</string>
    <string name="trail_low"><b>Low: </b>%1$,d\'</string>
    <string name="trail_needs_summary">needs summary</string>
    <string name="trail_see_more">See More Here</string>

    <string name="trail_no_description_available">No description available</string>

    <string name="sample_trail_title">Mt. Galbraith Park Loop</string>
    <string name="sample_trail_difficulty">Moderate</string>
    <string name="sample_trail_length">4.3 mi</string>
    <string name="sample_trail_ascent">918\'</string>
    <string name="sample_trail_descent">-919\'</string>
    <string name="sample_trail_high">7,192\'</string>
    <string name="sample_trail_low">6,289\'</string>
    <string name="sample_trail_summary">A fun singletrack lollipop loop up and
        around Mt. Galbraith\'s peak with views in all directions.</string>
    <string name="sample_trail_url">https://www.hikingproject.com/trail/7000130/bear-peak-out-and-back</string>
    <string name="appwidget_default_text">Data Not Available</string>
    <string name="add_widget">Add widget</string>
    <string name="last_viewed_trail_id_key">Last Viewed Trail ID Key</string>
    <string name="last_viewed_trail_lat_key">Last Viewed Trail LAT Key</string>
    <string name="last_viewed_trail_lon_key">Last Viewed Trail LON Key</string>
    <string name="preference_file_key">Preference File Key</string>

</resources>
