<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="includedTrail"
            type="com.example.android.trailfinder.data.database.model.Trail" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/trail_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/trail_detail_horizontal_padding"
        android:paddingTop="@dimen/trail_detail_vertical_padding"
        android:paddingEnd="@dimen/trail_detail_horizontal_padding"
        android:paddingBottom="@dimen/trail_detail_vertical_padding">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_trail_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.55" />

        <TextView
            android:id="@+id/textview_trail_difficulty"
            style="@style/trail_detail_textview_style"
            android:textSize="@dimen/trail_detail_textview_difficulty_text_size"
            app:difficultyText="@{includedTrail.difficulty}"
            app:difficultyTextColor="@{includedTrail.difficulty}"
            app:layout_constraintBottom_toTopOf="@+id/textview_trail_ascent"
            app:layout_constraintStart_toStartOf="@+id/trail_details"
            app:layout_constraintTop_toTopOf="@+id/trail_details"
            tools:text="@string/sample_trail_difficulty" />

        <TextView
            android:id="@+id/textview_trail_length"
            style="@style/trail_detail_textview_style"
            android:text="@{@string/trail_length(includedTrail.length)}"
            android:textColor="@color/colorBrownDark"
            android:textSize="@dimen/trail_detail_textview_trail_length_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/textview_trail_difficulty"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_trail_detail"
            tools:text="@string/sample_trail_length" />

        <TextView
            android:id="@+id/textview_trail_ascent"
            style="@style/trail_detail_textview_info_style"
            android:text="@{@string/trail_ascent(includedTrail.ascent)}"
            app:layout_constraintBottom_toTopOf="@+id/textview_trail_descent"
            app:layout_constraintStart_toStartOf="@+id/trail_details"
            app:layout_constraintTop_toBottomOf="@+id/textview_trail_difficulty"
            tools:text="@string/sample_trail_ascent" />

        <TextView
            android:id="@+id/textview_trail_high"
            style="@style/trail_detail_textview_info_style"
            android:text="@{@string/trail_high(includedTrail.high)}"
            app:layout_constraintBottom_toBottomOf="@+id/textview_trail_ascent"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_trail_detail"
            tools:text="@string/sample_trail_high" />

        <TextView
            android:id="@+id/textview_trail_descent"
            style="@style/trail_detail_textview_info_style"
            android:text="@{@string/trail_descent(includedTrail.descent)}"
            app:layout_constraintBottom_toTopOf="@+id/textview_trail_summary"
            app:layout_constraintStart_toStartOf="@+id/trail_details"
            app:layout_constraintTop_toBottomOf="@+id/textview_trail_ascent"
            tools:text="@string/sample_trail_descent" />

        <TextView
            android:id="@+id/textview_trail_low"
            style="@style/trail_detail_textview_info_style"
            android:text="@{@string/trail_low(includedTrail.low)}"
            app:layout_constraintBottom_toBottomOf="@+id/textview_trail_descent"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_trail_detail"
            tools:text="@string/sample_trail_low" />

        <TextView
            android:id="@+id/textview_trail_summary"
            style="@style/trail_detail_textview_additional_info_style"
            android:textAlignment="textStart"
            android:textColor="?attr/themeTextViewTextColorLight"
            app:layout_constraintBottom_toTopOf="@+id/textview_trail_link"
            app:layout_constraintEnd_toEndOf="@+id/trail_details"
            app:layout_constraintStart_toStartOf="@+id/trail_details"
            app:layout_constraintTop_toBottomOf="@+id/textview_trail_descent"
            app:summaryText="@{includedTrail.summary}"
            tools:text="@string/sample_trail_summary" />

        <TextView
            android:id="@+id/textview_trail_link"
            style="@style/trail_detail_textview_additional_info_style"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/trail_details"
            app:layout_constraintEnd_toEndOf="@+id/trail_details"
            app:layout_constraintStart_toStartOf="@+id/trail_details"
            app:layout_constraintTop_toBottomOf="@+id/textview_trail_summary"
            app:urlLink="@{includedTrail.url}"
            tools:text="@string/trail_see_more" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
