<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/themeContentBackground"
        tools:context="first.project.android.trailfinder.ui.about.AboutActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_about_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/themePrimary"
            android:elevation="@dimen/toolbar_elevation"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <TextView
            android:id="@+id/title_textview"
            style="@style/about_textview_style"
            android:textSize="@dimen/about_textview_textsize_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_about_toolbar"
            app:layout_constraintVertical_bias="0.15"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/developed_by_textview"
            style="@style/about_textview_style"
            android:layout_marginTop="@dimen/about_textview_vertical_margin"
            android:text="@string/developed_by"
            android:textSize="@dimen/about_textview_textsize_regular"
            app:layout_constraintEnd_toEndOf="@+id/title_textview"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="@+id/title_textview"
            app:layout_constraintTop_toBottomOf="@+id/title_textview"
            tools:text="@string/developed_by" />

        <TextView
            android:id="@+id/contact_textview"
            style="@style/about_textview_style"
            android:layout_marginTop="@dimen/about_textview_vertical_margin"
            android:text="@string/contact"
            android:textSize="@dimen/about_textview_textsize_regular"
            app:layout_constraintEnd_toEndOf="@+id/title_textview"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="@+id/title_textview"
            app:layout_constraintTop_toBottomOf="@+id/developed_by_textview"
            tools:text="@string/contact" />

        <TextView
            android:id="@+id/privacy_policy_textview"
            style="@style/about_textview_style"
            android:layout_marginTop="@dimen/about_textview_vertical_margin"
            android:text="@string/privacy_policy"
            android:textSize="@dimen/about_textview_textsize_regular"
            app:layout_constraintEnd_toEndOf="@+id/title_textview"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="@+id/title_textview"
            app:layout_constraintTop_toBottomOf="@+id/contact_textview"
            tools:text="@string/privacy_policy" />

        <ImageView
            android:id="@+id/hiker_image"
            android:layout_width="@dimen/about_imageview_width"
            android:layout_height="@dimen/about_imageview_height"
            android:src="@drawable/hiker"
            android:contentDescription="@string/hiker_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/privacy_policy_textview" />

        <TextView
            android:id="@+id/note_textview"
            style="@style/about_textview_note_style"
            android:text="@string/note"
            android:textSize="@dimen/about_textview_textsize_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="@string/note"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>